--- a/Website/mobile/styles/style.css
+++ b/Website/mobile/styles/style.css
@@ -6,9 +6,9 @@
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 60px;
+    font-size: 80px;
     cursor: pointer;
-    border-radius: 4px;
+    border-radius: 40px;
     width: 75%;
 }
 
@@ -32,37 +32,38 @@
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 25px;
+    font-size: 50px;
     cursor: pointer;
     border-radius: 4px;
     width: 75%;
 }
 
 .no_location {
-    margin: 10px 42.5%;
+    margin: 10% 17.5%;
     background-color: #545454;
     color: white;
     padding: 10px 20px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 12px;
+    font-size: 70px;
     cursor: pointer;
-    border-radius: 4px;
-    width: 15%;
+    border-radius: 40px;
+    width: 65%;
 }
 
 .selector {
-    margin: auto 20%;
+    margin: auto 10%;
     color: black;
-    padding: 10px 20px;
+    padding: 12px 20px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 25px;
     cursor: pointer;
     border-radius: 4px;
-    width: 60%;
+    width: 80%;
+    height: 20%;
 }
 
 .option {
